--- a/src/app/nav-menu/nav-menu.component.html
+++ b/src/app/nav-menu/nav-menu.component.html
@@ -1,5 +1,5 @@
 <ul class="menu">
   <li *ngFor="let element of menuElements" class="menu-element">
-    {{element}}
+    <p>{{element}}</p>
   </li>
 </ul>
