--- a/src/app/card-block/card-block.component.html
+++ b/src/app/card-block/card-block.component.html
@@ -1,10 +1,21 @@
-<ul>
-  <li *ngFor="let product of products" class="card">
-
-    <img src="{{product.img}}" alt="" class="card-img">
-    <div class="name-price">
-      {{product.name}}: ${{product.price}}
+<div class="container">
+    <div *ngFor="let product of products" class="card-element">
+      <div class="card">
+        <div class="card-image">
+          <img src="{{product.img}}" alt="">
+        </div>
+        <div class="card-content">
+          <div class="card-name-and-price">
+            <p>{{product.name}} <br> ${{product.price}}</p>
+          </div>
+          <div>
+            <button class="add-to-cart" type="button">
+              ADD TO CART
+            </button>
+          </div>
+        </div>
+      </div>
     </div>
-  </li>
-</ul>
+</div>
+
 
