--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 /* global styles */
 * {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Montserrat, Helvetica, sans-serif;
 }
 
 html {
