--- a/src/app/nav-menu/nav-menu.component.html
+++ b/src/app/nav-menu/nav-menu.component.html
@@ -1,5 +1,9 @@
 <ul class="menu">
-  <li *ngFor="let element of menuElements" class="menu-element">
-    <p>{{element}}</p>
+  <li *ngFor="let element of menuElements" (click)="selectField(element)"
+    [ngClass]="{'menu-element' : element !== selectedField, 'menu-element-selected' : element === selectedField} "
+    class="menu-element">
+    <p>
+      {{element}}
+    </p>
   </li>
 </ul>
