Added some routes, you can now effectively filter cards using the menu + fixed some CSS

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,10 @@
 <app-header></app-header>
-<app-body></app-body>
+
+<table class="table">
+  <tr class="nav-box">
+    <td class="nav"><div class="menu-box"><app-nav-menu></app-nav-menu></div></td>
+    <td class="cards"><router-outlet></router-outlet></td>
+  </tr>
+</table>
+
 
