--- a/src/app/card-block/card-block.component.css
+++ b/src/app/card-block/card-block.component.css
@@ -1,8 +1,15 @@
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  margin-left: 20px;
+  margin-top: 20px;
+  width: 100%;
+}
+
 .card-element {
   width: 264px;
-  height: 336px;
-  margin: 20px;
-  float: left;
+  height: 362px;
 
   /* shadow */
   box-shadow: 0 0 10px 5px #9a9a9a;
@@ -17,8 +24,6 @@
   position: relative;
   left: 10px;
 }
-
-
 
 .add-to-cart {
   background-color: #233142;
