Added welcome and 404 page and routes, UI stuff as well

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,4 @@
 <app-header></app-header>
 
-<table class="table">
-  <tr class="nav-box">
-    <td class="nav"><div class="menu-box"><app-nav-menu></app-nav-menu></div></td>
-    <td class="cards"><router-outlet></router-outlet></td>
-  </tr>
-</table>
-
+<router-outlet></router-outlet>
 
