--- a/src/app/body/body.component.html
+++ b/src/app/body/body.component.html
@@ -1,3 +1,8 @@
-<div class="main">
-  <app-card-block class="card-block-box"></app-card-block>
+<div class="page">
+  <div class="nav">
+      <div class><app-nav-menu></app-nav-menu></div>
+  </div>
+  <div class="main">
+    <app-card-block class="card-block-box"></app-card-block>
+  </div>
 </div>
