--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <div class="header">
-  <h1>{{title}}</h1>
+  <h1 (click)="goToWelcomePage()">{{title}}</h1>
   <i class="fa-solid fa-user"></i>
   <i class="fa-solid fa-cart-shopping"></i>
 </div>
