Almost finished implementing the search bar filtering, still need to fix some thing, it broke the menu filtering and has some side effects that need to be corrected

--- a/src/app/nav-menu/nav-menu.component.html
+++ b/src/app/nav-menu/nav-menu.component.html
@@ -1,9 +1,18 @@
-<ul class="menu">
-  <li *ngFor="let element of menuElements" (click)="selectCategory(element)"
-    [ngClass]="{'menu-element' : element !== selectedCategory, 'menu-element-selected' : element === selectedCategory} "
-    class="menu-element">
-    <p>
-      {{element}}
-    </p>
-  </li>
-</ul>
+<div class="navbar-container">
+  <ul class="menu">
+    <li *ngFor="let element of menuElements" (click)="selectCategory(element)"
+        [ngClass]="{'menu-element' : element !== selectedCategory, 'menu-element-selected' : element === selectedCategory} "
+        class="menu-element">
+      <p>
+        {{element}}
+      </p>
+    </li>
+  </ul>
+
+  <form action="">
+    <input #input
+           (keyup)="updateValue(input.value)"
+           type="text"
+           placeholder="Search for an item">
+  </form>
+</div>
