--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,5 +1,5 @@
 <div class="welcome-container">
-  <h1> Welcome on a really really cool online shop</h1>
+  <h1> Welcome to our really really cool online shop</h1>
   <button routerLink="/products"> Go to Products </button>
   <img src="../../assets/images/welcome.png" alt="">
   <p>
