--- a/src/app/card-block/card-block.component.css
+++ b/src/app/card-block/card-block.component.css
@@ -13,6 +13,7 @@
 
   /* shadow */
   box-shadow: 0 0 10px 5px #9a9a9a;
+  border-radius: 4px;
 }
 
 .card-image {
@@ -31,6 +32,8 @@
   width: 100%;
   height: 28px;
   border: none;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
 }
 
 .add-to-cart:hover {
