--- a/src/app/nav-menu/nav-menu.component.css
+++ b/src/app/nav-menu/nav-menu.component.css
@@ -1,6 +1,16 @@
+.navbar-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+/* -------- navigation menu -------- */
+
 .menu {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  padding: 0;
 }
 
 .menu-element, .menu-element-selected {
@@ -9,7 +19,7 @@
   display: flex;
   padding: .3em 0;
   height: 2em;
-  width: 80%;
+  width: 200px;
   text-decoration: none;
   list-style-type: none;
   align-items: center;
@@ -41,4 +51,20 @@
 
 p {
   margin: 0 15px;
+}
+
+/* -------- input form -------- */
+
+input {
+  border: none;
+  border-radius: 4px;
+  height: 2em;
+  width: 200px;
+
+  color: #233142;
+  background-color: #e3e3e3;
+}
+
+input:focus {
+  border: 2px solid #f95959;
 }
