Added search bar filtering, fixed typos, changed the routing scheme

--- a/src/app/nav-menu/nav-menu.component.html
+++ b/src/app/nav-menu/nav-menu.component.html
@@ -13,6 +13,6 @@
     <input #input
            (keyup)="updateValue(input.value)"
            type="text"
-           placeholder="Search for an item">
+           placeholder="Search for a product">
   </form>
 </div>
