--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -1,5 +1,5 @@
 <div class="not-found-container">
-  <h1> Sorry, this page doesn't exist ! </h1>
+  <h1> Oops, it looks like this page doesn't exist ! </h1>
   <button routerLink=""> Go back to the welcome page </button>
   <img src="../../assets/images/error-404.png" alt="">
 </div>
