Made shopping cart work, it is now functional (Added a service for that), removed footer because it was useless, still some css stuff that doesn't work properly, not urgent though

--- a/src/app/card-block/card-block.component.html
+++ b/src/app/card-block/card-block.component.html
@@ -9,7 +9,7 @@
             <p>{{product.name}} <br> ${{product.price}}</p>
           </div>
           <div>
-            <button class="add-to-cart" type="button">
+            <button (click)="addToCart(product)" class="add-to-cart" type="button">
               ADD TO CART
             </button>
           </div>
