--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,7 @@
 <div class="header">
-  <h1 (click)="goToWelcomePage()">{{title}}</h1>
+  <h1 routerLink="/welcome">{{title}}</h1>
   <i class="fa-solid fa-user"></i>
-  <i class="fa-solid fa-cart-shopping"></i>
+  <i routerLink="/shopping-cart" class="fa-solid fa-cart-shopping"></i>
+
 </div>
 
